--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Sonivores Music Studio</title>
 		<link rel="stylesheet" href="./main.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
 		<link
 			</head>
 		<body>
-			<h1>Sonivores</h1>
-			<script src="./script.js"></script>
+
+			<div class="sonivore-title"></div>
 
 			<body class="innerbody">
 
