rotating artists page

--- a/index.html
+++ b/index.html
@@ -5,30 +5,46 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Sonivores Music Studio</title>
 		<link rel="stylesheet" href="./main.css">
-		<link
-			</head>
-		<body>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-			<div class="sonivore-title"></div>
+	</head>
+	<body class="sonivore-bg0">
 
-			<body class="innerbody">
+		<header>
+			<h2>Sonivore</h2>
+		</header>
 
-				<!------
-				<section>
-					<h2>Contact Us</h2>
-					<p>If you have any questions or would like to book a session,
-						feel free to get in touch with us.</p>
-					<p>Email: info@sonivoresstudio.com</p>
-					<p>Phone: +1 123-456-7890</p>
-				</section>
-			</main>
+		<div class="sonivore-title">
+			<img src="/assets/images/sonivore-logo.png" alt="Sonivores Music Studio">
+		</div>
 
-			<footer>
-				<p>&copy; 2024 Sonivores Music Studio. All rights reserved.</p>
-			</footer>
+		<div class="container">
+			<div class="container-carousel">
+				<div class="carousel">
+					<div class="carousel-item" data-description="Description0">
+						<img src="assets/images/evblack/evblack-profile0.png" draggable="false">
+					</div>
+					<div class="carousel-item" data-description="Description1">
+						<img src="assets/images/evblack/evblack-profile1.png" draggable="false">
+					</div>
+					<div class="carousel-item" data-description="Description2">
+						<img src="assets/images/evblack/evblack-profile2.png" draggable="false">
+					</div>
+					<div class="carousel-item" data-description="Description3">
+						<img src="assets/images/evblack/evblack-profile3.png" draggable="false">
+					</div>
+					<div class="carousel-item" data-description="Description4">
+						<img src="assets/images/evblack/evblack-profile4.png" draggable="false">
+					</div>
 
+				</div>
+			</div>
+		</div>
 
--->
+		<div>
+			<h2 id="description" style="margin-top: 5%;">ARTIST NAME</div>
+		</div>
+		<script src="./elements/carousel-01/script.js"></script>
 
-			</body>
-		</html>
+	</body>
+</html>
