--- a/assets/html/header.html
+++ b/assets/html/header.html
@@ -3,10 +3,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="artists.html">Artists</a></li>
+            <li><a href="events.html">Events</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="artists.html">Artists</a></li>
         </ul>
     </nav>
 </header>
