--- a/index.html
+++ b/index.html
@@ -15,26 +15,52 @@
 			});
 		</script>
 	</head>
-	<body class="sonivore-bg0">
+	<body class="sonivore-bg0"
+		style="background-size: cover;
+			height: 300vh;
+		">
 
-		<div class="sonivore-title">
-			<img src="/assets/images/sonivore-logo.png" alt="Sonivores Music Studio">
+		<!-- Home Record Image -->
+		<div
+			class="container"
+			style="
+					aspect-ratio: 1/1; 
+					display: block;
+					flex-direction: column;
+
+					margin: 50px;
+
+					background-image: url('/assets/images/sonivore-record1.png');
+					background-size:cover;
+					">
+
+			<h2 style="
+				color: var(--sonivore-black-100);
+				text-align: center;
+				text-wrap:nowrap;"> Welcome to Sonivore</h2>
+
+			<div class="sonivore-container0"
+				style="
+					margin-top: 50%;
+					margin-left: 50%;
+					height: 15%;
+					">
+				Hello World
+			</div>
 		</div>
 
-		<div class="sonivore-circle container sonivore-bg0"
-			style="min-width: 50%; aspect-ratio: 1/1; flex-direction: column;">
-			<h2 style="color: var(--sonivore-black-100)"> We are Sonivore Studio</h2>
-
-			<h5 style="color: var(--sonivore-black-100);
-						margin-top: 25%;
-						width: 50%;">
-				We are a music studio that offers a wide range of services to help you create the music you want.
-				We offer recording, mixing, and mastering services.
-			</h5>
-
-			<div class="sonivore-button" style="margin-top: 10%;">
-				<a href="/services.html" style="color: var(--sonivore-black-100)">Learn More</a>
-			</div>
+		<!-- Description -->
+		<div
+			class="container"
+			style="flex-direction: column;
+				width: 50vh;">
+			<h2>Our Mission</h2>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+				dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
 		</div>
 
 	</body>
