proper css border radius

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body class="sonivore-bg0"
 		style="background-size: cover;
-			height: 300vh;
+			height: 500vh;
 		">
 
 		<!-- Home Record Image -->
@@ -27,6 +27,9 @@
 					aspect-ratio: 1/1; 
 					display: block;
 					flex-direction: column;
+
+					min-width: 45%;
+					max-width: 80%;
 
 					margin: 50px;
 
