quick background adjustment

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
 			});
 		</script>
 	</head>
-	<body class="sonivore-bg0"
-		style="background-size: cover;
-			height: 500vh;
-		">
+	<body class="sonivore-bg0">
 
 		<!-- Home Record Image -->
 		<div
