working on landing page

--- a/index.html
+++ b/index.html
@@ -17,51 +17,39 @@
 	</head>
 	<body class="sonivore-bg0">
 
-		<!-- Home Record Image -->
-		<div
-			class="container"
-			style="
-					aspect-ratio: 1/1; 
-					display: block;
-					flex-direction: column;
+		<!----[[ HOME ]]-->
+		<section class="column-container">
+			<div 
+				id="home"
+				class="square-ratio sonivore-bg1 column-container">
+				<h3 style="text-align: center; text-wrap:nowrap;"> Welcome to Sonivore</h3>
 
-					min-width: 45%;
-					max-width: 80%;
+				<div style="display: flex; flex-grow: 1; flex-basis: 200%;"></div>
 
-					margin: 50px;
+				<div class="row-container">
+					<div style="width: 200px;"></div>
+					<div class="sonivore-container0 sonivore-border0">
+						<h4 style="margin-top: 1px;" >Book Us!</h4>
+						<p>booksonivoreemail@gmail.com</p>
+						<button class="sonivore-button0">Book Now</button>
+					</div>
+				</div>
 
-					background-image: url('/assets/images/sonivore-record1.png');
-					background-size:cover;
-					">
-
-			<h2 style="
-				color: var(--sonivore-black-100);
-				text-align: center;
-				text-wrap:nowrap;"> Welcome to Sonivore</h2>
-
-			<div class="sonivore-container0"
-				style="
-					margin-top: 50%;
-					margin-left: 50%;
-					height: 15%;
-					">
-				Hello World
 			</div>
-		</div>
 
-		<!-- Description -->
-		<div
-			class="container"
-			style="flex-direction: column;
-				width: 50vh;">
-			<h2>Our Mission</h2>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-				dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
-		</div>
+			<!-- Description -->
+			<div
+				class="container column"
+				<h2>Our Mission</h2>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+					Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+					dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+					non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+			</div>
+		</section>
 
 	</body>
 </html>
