working with sql to make a csv file

--- a/assets/html/header.html
+++ b/assets/html/header.html
@@ -2,8 +2,8 @@
     <h2>Sonivore</h2>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="events.html">Events</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="/pages/events.html">Events</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="artists.html">Artists</a></li>
         </ul>
