--- a/index.html
+++ b/index.html
@@ -5,50 +5,43 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Sonivores Music Studio</title>
 		<link rel="stylesheet" href="./main.css">
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-		<!-- HEADER -->
 		<div id="header"></div>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 		<script>
-			$(document).ready(function() {
-				$("#header").load("/assets/html/header.html");
+			$(document).ready(function () {
+				$("#header").load("../assets/html/header.html");
 			});
 		</script>
+
 	</head>
 	<body class="sonivore-bg0">
 
 		<!----[[ HOME ]]-->
 		<section class="column-container">
-			<div 
-				id="home"
+			<div id="home"
 				class="square-ratio sonivore-bg1 column-container">
+
+				<!-- Title -->
 				<h3 style="text-align: center; text-wrap:nowrap;"> Welcome to Sonivore</h3>
 
+				<!-- Spacing -->
 				<div style="display: flex; flex-grow: 1; flex-basis: 200%;"></div>
 
+				<!-- Book Us! Container -->
 				<div class="row-container">
 					<div style="width: 200px;"></div>
-					<div class="sonivore-container0 sonivore-border0">
-						<h4 style="margin-top: 1px;" >Book Us!</h4>
+					<div class="sonivore-container-lg0 sonivore-border0">
+						<h4 style="margin-top: 1px;">Book Us!</h4>
 						<p>booksonivoreemail@gmail.com</p>
 						<button class="sonivore-button0">Book Now</button>
 					</div>
 				</div>
-
 			</div>
+		</section>
 
-			<!-- Description -->
-			<div
-				class="container column"
-				<h2>Our Mission</h2>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-					dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-					non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-			</div>
+		<section>
+
 		</section>
 
 	</body>
